tests/paczka1/fuzzy1/74384913.err
Error in line 5: fmtjaIZJu S894 16,3
Error in line 6: tgKpa4Ui5 A170 78,1
Error in line 9: fmtjaIZJu A170 95,3
Error in line 24: aaX A170 47,3
Error in line 15: S471 S894 75,4
Error in line 32: S471 A806 76,8
Error in line 18: tgKpa4Ui5 A170 30,8
